--- a/src/layouts/corelayout.astro
+++ b/src/layouts/corelayout.astro
@@ -1,4 +1,6 @@
 ---
+import Metrics from '../components/metrics.astro';
+
 interface Props {
     title: string;
 }
@@ -13,6 +15,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <Metrics />
 </head>
 <body>
     <slot />
