La til tailwind og Aksel CSS

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,14 +1,8 @@
 ---
 import Layout from '../layouts/corelayout.astro';
-
-interface Props {
-	title: string;
-}
-
-const { title } = Astro.props;
 ---
 
-<Layout title="Om Astro">
+<Layout title="Om Astro" class="prose">
 	<h1>Om Astro</h1>
 	<a href="/">Hjem</a>
 </Layout>
