Fjernet class fra Layout komponent

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/corelayout.astro';
 ---
 
-<Layout title="Om Astro" class="prose">
+<Layout title="Om Astro">
 	<h1>Om Astro</h1>
 	<a href="/">Hjem</a>
 </Layout>
