--- a/src/layouts/corelayout.astro
+++ b/src/layouts/corelayout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     <title>{title}</title>
     <Metrics />
 </head>
-<body>
+<body class="mx-auto max-w-screen-lg">
     <slot />
 </body>
 </html>
