--- a/src/layouts/corelayout.astro
+++ b/src/layouts/corelayout.astro
@@ -1,6 +1,8 @@
 ---
 import Metrics from '../components/metrics.astro';
 import '../styles/global.css';
+import Header from '../components/header.tsx';
+import Footer from '../components/footer.tsx';
 
 interface Props {
     title: string;
@@ -18,7 +20,11 @@ const { title } = Astro.props;
     <title>{title}</title>
     <Metrics />
 </head>
-<body class="mx-auto max-w-screen-lg">
-    <slot />
+<body>
+    <Header />
+    <main class="sm:w-5/6 max-w-[800rem] m-auto px-2 sm:px-6">
+        <slot />
+    </main>
+    <Footer client:load />
 </body>
 </html>
