--- a/src/layouts/corelayout.astro
+++ b/src/layouts/corelayout.astro
@@ -1,8 +1,8 @@
 ---
 import Metrics from '../components/metrics.astro';
 import '../styles/global.css';
-import Header from '../components/header.tsx';
-import Footer from '../components/footer.tsx';
+import Header from '../components/theme/header.tsx';
+import Footer from '../components/theme/footer.tsx';
 
 interface Props {
     title: string;
@@ -21,7 +21,7 @@ const { title } = Astro.props;
     <Metrics />
 </head>
 <body>
-    <Header />
+    <Header client:load />
     <main class="sm:w-5/6 max-w-[800rem] m-auto px-2 sm:px-6">
         <slot />
     </main>
