--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,8 @@
 ---
 import Layout from '../layouts/corelayout.astro';
 
-import Velkommen from "../components/velkommen.tsx";
 ---
 
 <Layout title="Astro Hjem">
-	<h1>Astro</h1>
-	<Velkommen client:load  />
+	<h1>Lekkasjetester</h1>
 </Layout>
