La til profilsider

--- a/src/layouts/corelayout.astro
+++ b/src/layouts/corelayout.astro
@@ -5,10 +5,11 @@ import Header from '../components/theme/header.tsx';
 import Footer from '../components/theme/footer.tsx';
 
 interface Props {
-    title: string;
+    title?: string;
+    description?: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props as Props;
 ---
 
 <html lang="no">
@@ -17,14 +18,15 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <title>Lekk{title ? ` - ${title}` : ''}</title>
+    {description && <meta name="description" content={description} />}
     <Metrics />
 </head>
 <body>
-    <Header client:load />
-    <main class="sm:w-5/6 max-w-[800rem] m-auto px-2 sm:px-6">
-        <slot />
-    </main>
-    <Footer client:load />
+<Header client:load />
+<main class="sm:w-5/6 max-w-[800rem] m-auto px-2 sm:px-6">
+    <slot />
+</main>
+<Footer client:load />
 </body>
 </html>
