--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,12 @@
 ---
 import Layout from '../layouts/corelayout.astro';
-
 ---
 
-<Layout title="Astro Hjem">
-	<h1>Lekkasjetester</h1>
+<Layout>
+	<h1>Velkommen til Lekk</h1>
+	<p class="max-w-prose mb-6">Velg en profil for å se detaljer:</p>
+	<ul>
+		<li><a href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135">Profilside for Ola Nordmann</a></li>
+		<li><a href="/profil/kari-nordmann/23031510135?name=ola-nordmann&fnr=23031510135">Profilside for Kari Nordmann</a></li>
+	</ul>
 </Layout>
