--- a/src/pages/om.astro
+++ b/src/pages/om.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/corelayout.astro';
 ---
 
-<Layout title="Om Astro">
+<Layout title="Om Lekk" description="Utvklet av Team ReserchOps for å teste hvordan analyseverktøy håndterer syntetisk persondata på avveie">
 	<h1>Om Lekk</h1>
 	<p class="max-w-prose">Lekk er utviklet av Team ResearchOps og ble laget for å kunne teste hvordan analyseverktøy som Amplitude og Umami håndterer syntetisk persondata på avveie.</p>
 </Layout>
