--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/corelayout.astro';
 	<h1>Velkommen til Lekk</h1>
 	<p class="max-w-prose mb-6">Velg en profil for å se detaljer:</p>
 	<ul>
-		<li><a href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135">Profilside for Ola Nordmann</a></li>
-		<li><a href="/profil/kari-nordmann/23031510135?name=ola-nordmann&fnr=23031510135">Profilside for Kari Nordmann</a></li>
+		<li><a href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135">Profilside for Ola Nordmann</a></li>
+		<li><a href="/profil/kari-nordmann/23031510135?name=ola-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135">Profilside for Kari Nordmann</a></li>
 	</ul>
 </Layout>
