--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,16 @@ import Layout from '../layouts/corelayout.astro';
 
 <Layout>
 	<h1>Velkommen til Lekk</h1>
-	<p class="max-w-prose mb-6">Velg en profil for å se detaljer:</p>
-	<ul>
-		<li><a href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135">Profilside for Ola Nordmann</a></li>
-		<li><a href="/profil/kari-nordmann/23031510135?name=ola-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135">Profilside for Kari Nordmann</a></li>
+	<p class="max-w-prose mb-4">Velg en profil for å se detaljer:</p>
+	<ul class="list-inside list-disc">
+		<li><a href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135">Profilside Ola Nordmann</a></li>
+		<li><a href="/profil/kari-nordmann/23031510135?name=ola-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135">Profilside Kari Nordmann</a></li>
+	</ul>
+
+
+	<p class="max-w-prose mb-4 mt-8">Tilkoblede analyseverktøy:</p>
+	<ul class="list-inside list-disc">
+		<li><a href="https://app.eu.amplitude.com/analytics/nav/space/product-analytics/product-overview?app=100008939">Amplitude</a></li>
+		<li><a href="https://umami.ansatt.nav.no/share/pYHYL85MeTxivZtg/leak.ansatt.nav.no">Umami</a></li>
 	</ul>
 </Layout>
