--- a/src/pages/profil/kari-nordmann/23031510135.astro
+++ b/src/pages/profil/kari-nordmann/23031510135.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../../../layouts/corelayout.astro';
+import Layout from '../../../layouts/profilelayout.astro';
 ---
 
-<Layout title="Kari Nordmann (fnr: 23031510135)" description="Profilside Kari Nordmann (fnr: 23031510135)">
-    <h1>Profilside for Kari Nordmann</h1>
-    <p class="max-w-prose">Dette er profilen til Kari Nordmann med fødselsnummeret 23031510135.</p>
+<Layout name="Kari Nordmann" fnr="23031510135" title="Kari Nordmann (fnr: 23031510135)" description="Profilside Kari Nordmann (fnr: 23031510135)">
+    <p class="mb-4 mt-8 font-semibold">Forskjell fra <a href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135">Ola Nordmann</a>:</p>
+    <p>FNR er i meta name og description formattert slik "23031510135" isteden for "240315 10135".</p>
 </Layout>
