--- a/src/pages/profil/ola-nordmann/24031510135.astro
+++ b/src/pages/profil/ola-nordmann/24031510135.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../../../layouts/corelayout.astro';
+import Layout from '../../../layouts/profilelayout.astro';
 ---
 
-<Layout title="Ola Nordmann (fnr: 230315 10135)" description="Profilside Ola Nordmann (fnr: 240315 10135)">
-    <h1>Profilside for Ola Nordmann</h1>
-    <p class="max-w-prose">Dette er profilen til Ola Nordmann med fødselsnummeret 240315 10135.</p>
+<Layout name="Ole Nordmann" fnr="24031510135" title="Ola Nordmann (fnr: 230315 10135)" description="Profilside Ola Nordmann (fnr: 240315 10135)">
+    <p class="mb-4 mt-8 font-semibold">Forskjell fra <a href="/profil/kari-nordmann/23031510135?name=ola-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135">Kari Nordmann</a>:</p>
+    <p>FNR er i meta name og description formattert slik "240315 10135" isteden for "23031510135".</p>
 </Layout>
