--- a/src/layouts/profilelayout.astro
+++ b/src/layouts/profilelayout.astro
@@ -4,6 +4,7 @@ import '../styles/global.css';
 import Header from '../components/theme/header.tsx';
 import Footer from '../components/theme/footer.tsx';
 import Akselalert from '../components/mixed/akselalert.tsx';
+import Analyticsdetails from "../components/mixed/analyticsdetails.tsx";
 
 interface Props {
     title?: string;
@@ -42,13 +43,13 @@ const firstName = name ? getFirstName(name) : '';
 <main class="sm:w-5/6 max-w-[80rem] m-auto px-2 sm:px-6 mb-12">
     <h1>{name} (fnr: {formattedFnr})</h1>
     <Akselalert />
-    <p class="mt-8 font-semibold">Lekkede opplysninger i URL-sti (eg. /profile/{firstName}):</p>
+    <p class="mt-8 font-semibold">Lekkede opplysninger i URL-sti (eg. /profile/{firstName})</p>
     <ul class="list-inside list-disc mt-4">
         <li>Navn: {name}</li>
         <li>FNR: {fnr}</li>
     </ul>
 
-    <p class="mt-8 font-semibold">Lekkede opplysninger i URL parametre (eg. ?name={firstName}):</p>
+    <p class="mt-8 font-semibold">Lekkede opplysninger i URL parametre (eg. ?name={firstName})</p>
     <ul class="list-inside list-disc mt-4">
         <li>name: {name}</li>
         <li>fnr: {fnr}</li>
@@ -57,19 +58,17 @@ const firstName = name ? getFirstName(name) : '';
         <li>utm_campaign: {fnr}</li>
     </ul>
 
-    <p class="mt-8 font-semibold">Lekkede opplysninger i meta (definert i nettsidens HEAD):</p>
+    <p class="mt-8 font-semibold">Lekkede opplysninger i meta (definert i nettsidens HEAD)</p>
     <ul class="list-inside list-disc mt-4">
         <li>Title: "Lekk - {name} (fnr: {formattedFnr})"</li>
         <li>Description: "Lekk - {name} (fnr: {formattedFnr})"</li>
     </ul>
 
+    <Analyticsdetails />
+
     <slot />
 
-    <p class="max-w-prose mb-4 mt-8 font-semibold">Tilkoblede analyseverktøy:</p>
-    <ul class="list-inside list-disc">
-        <li><a href="https://app.eu.amplitude.com/analytics/nav/space/product-analytics/product-overview?app=100008939">Amplitude</a></li>
-        <li><a href="https://umami.ansatt.nav.no/share/pYHYL85MeTxivZtg/leak.ansatt.nav.no">Umami</a></li>
-    </ul>
+
 </main>
 <Footer client:load />
 </body>
