--- a/src/layouts/profilelayout.astro
+++ b/src/layouts/profilelayout.astro
@@ -4,7 +4,7 @@ import '../styles/global.css';
 import Header from '../components/theme/header.tsx';
 import Footer from '../components/theme/footer.tsx';
 import Akselalert from '../components/mixed/akselalert.tsx';
-import Analyticsdetails from "../components/mixed/analyticsdetails.tsx";
+import Analyticsdetails from "../components/mixed/analyticsdetails.astro";
 
 interface Props {
     title?: string;
@@ -43,14 +43,14 @@ const firstName = name ? getFirstName(name) : '';
 <main class="sm:w-5/6 max-w-[80rem] m-auto px-2 sm:px-6 mb-12">
     <h1>{name} (fnr: {formattedFnr})</h1>
     <Akselalert />
-    <p class="mt-8 font-semibold">Lekkede opplysninger i URL-sti (eg. /profile/{firstName})</p>
+    <p class="mt-8 font-semibold leading-relaxed">Lekkede opplysninger i URL-sti (eg. /profile/{firstName})</p>
     <ul class="list-inside list-disc mt-4">
         <li>Navn: {name}</li>
         <li>FNR: {fnr}</li>
     </ul>
 
     <p class="mt-8 font-semibold">Lekkede opplysninger i URL parametre (eg. ?name={firstName})</p>
-    <ul class="list-inside list-disc mt-4">
+    <ul class="list-inside list-disc mt-4 leading-relaxed">
         <li>name: {name}</li>
         <li>fnr: {fnr}</li>
         <li>utm_source: {fnr}</li>
@@ -59,7 +59,7 @@ const firstName = name ? getFirstName(name) : '';
     </ul>
 
     <p class="mt-8 font-semibold">Lekkede opplysninger i meta (definert i nettsidens HEAD)</p>
-    <ul class="list-inside list-disc mt-4">
+    <ul class="list-inside list-disc mt-4 leading-relaxed">
         <li>Title: "Lekk - {name} (fnr: {formattedFnr})"</li>
         <li>Description: "Lekk - {name} (fnr: {formattedFnr})"</li>
     </ul>
@@ -67,8 +67,6 @@ const firstName = name ? getFirstName(name) : '';
     <Analyticsdetails />
 
     <slot />
-
-
 </main>
 <Footer client:load />
 </body>
