--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,8 +7,8 @@ import Analyticsdetails from "../components/mixed/analyticsdetails.astro";
 	<h1>Velkommen til Lekk</h1>
 	<p class="mb-4 font-semibold">Velg en profil du vil teste med</p>
 	<ul class="list-inside list-disc leading-relaxed">
-		<li><a href="/profil/kari-nordmann/23031510135?name=ola-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135">Kari Nordmann (fnr: 230315 10135)</a></li>
-		<li><a href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135">Ola Nordmann (fnr: 240315 10135)</a></li>
+		<li><a class="underline hover:no-underline" href="/profil/kari-nordmann/23031510135?name=ola-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135">Kari Nordmann (fnr: 230315 10135)</a></li>
+		<li><a class="underline hover:no-underline" href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135">Ola Nordmann (fnr: 240315 10135)</a></li>
 	</ul>
 
 	<p class="mb-4 mt-8 font-semibold">Slik fungerer Lekk</p>
