--- a/src/pages/profil/kari-nordmann/23031510135.astro
+++ b/src/pages/profil/kari-nordmann/23031510135.astro
@@ -3,6 +3,6 @@ import Layout from '../../../layouts/profilelayout.astro';
 ---
 
 <Layout name="Kari Nordmann" fnr="23031510135" title="Kari Nordmann (fnr: 23031510135)" description="Profilside Kari Nordmann (fnr: 23031510135)">
-    <p class="mb-4 mt-8 font-semibold">Forskjell fra <a href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135">Ola Nordmann</a></p>
+    <p class="mb-4 mt-8 font-semibold">Forskjell fra <a class="underline hover:no-underline" href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135">Ola Nordmann</a></p>
     <p>FNR er i meta name og description formattert slik "23031510135" isteden for "240315 10135".</p>
 </Layout>
