Justerte layout css

--- a/src/layouts/corelayout.astro
+++ b/src/layouts/corelayout.astro
@@ -24,7 +24,7 @@ const { title, description } = Astro.props as Props;
 </head>
 <body>
 <Header client:load />
-<main class="sm:w-5/6 max-w-[80rem] m-auto px-3 sm:px-6 mb-12">
+<main class="sm:w-5/6 max-w-[80rem] m-auto px-3 sm:px-6 mb-12 mt-10">
     <slot />
 </main>
 <Footer client:load />
