--- a/src/pages/om.astro
+++ b/src/pages/om.astro
@@ -4,5 +4,5 @@ import Layout from '../layouts/corelayout.astro';
 
 <Layout title="Om Lekk" description="Utvklet av Team ReserchOps for å teste hvordan analyseverktøy håndterer syntetisk persondata på avveie">
 	<h1>Om Lekk</h1>
-	<p class="max-w-prose">Lekk er utviklet av Team ResearchOps og ble laget for å kunne teste hvordan analyseverktøy som Amplitude og Umami håndterer syntetisk persondata på avveie.</p>
+	<p class="max-w-prose leading-relaxed">Lekk er utviklet av Team ResearchOps og ble laget for å kunne teste hvordan analyseverktøy som Amplitude og Umami håndterer syntetisk persondata. Vi har bygget en proxy som forsøker å filtrere bort persondata, med Lekk kan vi sjekke hvor godt filteret fungerer.</p>
 </Layout>
