--- a/src/components/mixed/analyticsdetails.astro
+++ b/src/components/mixed/analyticsdetails.astro
@@ -8,7 +8,7 @@
         <ul class="list-inside list-disc ml-6">
             <li>Amplitude prosjekt: "Reops Leak - test"</li>
             <li>Amplitude public api key: "7883e1a1c733f2cfdf634b71f523ae67"</li>
-            <li>API endepunkt: https://amplitude.nav.no/collect-auto</li>
+            <li>API endepunkt: "https://amplitude.nav.no/collect-auto"</li>
             <li>Tilkoblet Amplitude Proxy: Ja</li>
         </ul>
     </li>
@@ -17,7 +17,7 @@
         <ul class="list-inside list-disc ml-6">
             <li>Umami team: "nav - test"</li>
             <li>Umami website id: "0a0bc436-1eac-45ac-81ab-697ab77ebec1"</li>
-            <li>API endepunkt: https://umami.nav.no/send</li>
+            <li>API endepunkt: "https://umami.nav.no/send"</li>
             <li>Tilkoblet Amplitude Proxy: Nei, men ønsker å bli det</li>
         </ul>
     </li>
