--- a/src/components/metrics.astro
+++ b/src/components/metrics.astro
@@ -1,1 +1,55 @@
 <script is:inline defer src="https://cdn.nav.no/team-researchops/sporing/sporing.js" data-host-url="https://umami.nav.no" data-website-id="0a0bc436-1eac-45ac-81ab-697ab77ebec1"></script>
+<script defer>
+    // @ts-nocheck
+    !function () {
+        "use strict";
+        !function (e, t) {
+            var n = e.amplitude || {_q: [], _iq: {}};
+            if (n.invoked) e.console && console.error && console.error("Amplitude snippet has been loaded."); else {
+                var r = function (e, t) {
+                    e.prototype[t] = function () {
+                        return this._q.push({name: t, args: Array.prototype.slice.call(arguments, 0)}), this
+                    }
+                }, s = function (e, t, n) {
+                    return function (r) {
+                        e._q.push({name: t, args: Array.prototype.slice.call(n, 0), resolve: r})
+                    }
+                }, o = function (e, t, n) {
+                    e[t] = function () {
+                        if (n) return {promise: new Promise(s(e, t, Array.prototype.slice.call(arguments)))}
+                    }
+                }, i = function (e) {
+                    for (var t = 0; t < y.length; t++) o(e, y[t], !1);
+                    for (var n = 0; n < g.length; n++) o(e, g[n], !0)
+                };
+                n.invoked = !0;
+                var a = t.createElement("script");
+                a.type = "text/javascript", a.crossOrigin = "anonymous", a.async = !0, a.src = "https://cdn.nav.no/team-researchops/amplitudeNavSdk.js.gz", a.onload = function () {
+                    if (!e.amplitude.runQueuedFunctions) {
+                        console.log("[Amplitude] Error: could not load SDK");
+                    }
+                };
+                var c = t.getElementsByTagName("script")[0];
+                c.parentNode.insertBefore(a, c);
+                for (var u = function () {
+                    return this._q = [], this
+                }, l = ["add", "append", "clearAll", "prepend", "set", "setOnce", "unset", "preInsert", "postInsert", "remove", "getUserProperties"], p = 0; p < l.length; p++) r(u, l[p]);
+                n.Identify = u;
+                for (var d = function () {
+                    return this._q = [], this
+                }, f = ["getEventProperties", "setProductId", "setQuantity", "setPrice", "setRevenue", "setRevenueType", "setEventProperties"], v = 0; v < f.length; v++) r(d, f[v]);
+                n.Revenue = d;
+                var y = ["getDeviceId", "setDeviceId", "getSessionId", "setSessionId", "getUserId", "setUserId", "setOptOut", "setTransport", "reset"],
+                    g = ["init", "add", "remove", "track", "logEvent", "identify", "groupIdentify", "setGroup", "revenue", "flush"];
+                i(n), n.createInstance = function (e) {
+                    return n._iq[e] = {_q: []}, i(n._iq[e]), n._iq[e]
+                }, e.amplitude = n
+            }
+        }(window, document)
+    }();
+
+    amplitude.init("7883e1a1c733f2cfdf634b71f523ae67", null, {
+        serverZone: "EU",
+        defaultTracking: true,
+    });
+</script>
