Fikset utm lenke

--- a/src/pages/profil/ola-nordmann/24031510135.astro
+++ b/src/pages/profil/ola-nordmann/24031510135.astro
@@ -3,6 +3,6 @@ import Layout from '../../../layouts/profilelayout.astro';
 ---
 
 <Layout name="Ola Nordmann" fnr="24031510135" title="Ola Nordmann (fnr: 230315 10135)" description="Profilside Ola Nordmann (fnr: 240315 10135)">
-    <p class="mb-4 mt-8 font-semibold">Forskjell fra <a class="underline hover:no-underline" href="/profil/kari-nordmann/23031510135?name=ola-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135">Kari Nordmann</a></p>
+    <p class="mb-4 mt-8 font-semibold">Forskjell fra <a class="underline hover:no-underline" href="/profil/kari-nordmann/23031510135?name=kari-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135">Kari Nordmann</a></p>
     <p>FNR er i meta name og description formattert slik "240315 10135" isteden for "23031510135".</p>
 </Layout>
