--- a/src/layouts/profilelayout.astro
+++ b/src/layouts/profilelayout.astro
@@ -42,7 +42,7 @@ const firstName = name ? getFirstName(name) : '';
 <Header client:load />
 <main class="sm:w-5/6 max-w-[80rem] m-auto px-3 sm:px-6 mb-12 mt-10">
     <h1>{name} (fnr: {formattedFnr})</h1>
-    <Akselalert />
+    <Akselalert client:load />
     <p class="mt-8 font-semibold leading-relaxed">Lekkede opplysninger i URL-sti (eg. /profile/{firstName})</p>
     <ul class="list-inside list-disc mt-4">
         <li>Navn: {name}</li>
