--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,14 +5,15 @@ import Analyticsdetails from "../components/mixed/analyticsdetails.astro";
 
 <Layout description="En app for å teste hvordan analyseverktøy som Amplitude og Umami håndterer syntetisk persondata på avveie">
 	<h1>Velkommen til Lekk</h1>
-	<p class="mb-4 font-semibold">Velg en profil du vil teste med</p>
+	<p class="mb-4 font-semibold">Velg en Lekk-testvariant</p>
 	<ul class="list-inside list-disc leading-relaxed">
 		<li><a class="underline hover:no-underline" href="/profil/kari-nordmann/23031510135?name=kari-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135">Kari Nordmann (fnr: 230315 10135)</a></li>
 		<li><a class="underline hover:no-underline" href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135">Ola Nordmann (fnr: 240315 10135)</a></li>
+		<li><a class="underline hover:no-underline" href="/search">Søkeboks / fritekst</a></li>
 	</ul>
 
 	<p class="mb-4 mt-8 font-semibold">Slik fungerer Lekk</p>
-	<p class="max-w-prose leading-relaxed">Når du går inn på en av profilene, logges besøket til analyseverktøyene Amplitude og Umami. Ettersom profilsidene er laget etter værste praksis sender den i utgangspunktet med både (syntetiske) navn og FNR i loggen. Vi har bygget en proxy som forsøker å filtrere bort persondata, med Lekk kan vi sjekke hvor godt filteret fungerer.</p>
+	<p class="max-w-prose leading-relaxed">Når du går inn på en Lekk-testvariantene, logges besøket til analyseverktøyene Amplitude og Umami. Ettersom profilsidene er laget etter værste praksis sender den i utgangspunktet med både (syntetiske) navn og FNR i loggen. Vi har bygget en proxy som forsøker å filtrere bort persondata, med Lekk kan vi sjekke hvor godt filteret fungerer.</p>
 
 	<Analyticsdetails />
 </Layout>
