--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,16 @@
 ---
 import Layout from '../layouts/corelayout.astro';
 import Analyticsdetails from "../components/mixed/analyticsdetails.astro";
+import { Link } from "@navikt/ds-react";
 ---
 
 <Layout description="En app for å teste hvordan analyseverktøy som Amplitude og Umami håndterer syntetisk persondata på avveie">
 	<h1>Velkommen til Lekk</h1>
 	<p class="mb-4 font-semibold">Velg en Lekk-testvariant</p>
 	<ul class="list-inside list-disc leading-relaxed">
-		<li><a class="underline hover:no-underline" href="/profil/kari-nordmann/23031510135?name=kari-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135">Kari Nordmann (fnr: 230315 10135)</a></li>
-		<li><a class="underline hover:no-underline" href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135">Ola Nordmann (fnr: 240315 10135)</a></li>
-		<li><a class="underline hover:no-underline" href="/sok">Søkeboks / fritekstfelt</a></li>
+		<li><Link load:client href="/profil/kari-nordmann/23031510135?name=kari-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135">Kari Nordmann (fnr: 230315 10135)</Link></li>
+		<li><Link load:client href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135">Ola Nordmann (fnr: 240315 10135)</Link></li>
+		<li><Link load:client href="/sok">Søkeboks / fritekstfelt</Link></li>
 	</ul>
 
 	<p class="mb-4 mt-8 font-semibold">Slik fungerer Lekk</p>
