Fjernet client load fra lenker

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,9 @@ import { Link } from "@navikt/ds-react";
 	<h1>Velkommen til Lekk</h1>
 	<p class="mb-4 font-semibold">Velg en Lekk-testvariant</p>
 	<ul class="list-inside list-disc leading-relaxed">
-		<li><Link load:client href="/profil/kari-nordmann/23031510135?name=kari-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135">Kari Nordmann (fnr: 230315 10135)</Link></li>
-		<li><Link load:client href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135">Ola Nordmann (fnr: 240315 10135)</Link></li>
-		<li><Link load:client href="/sok">Søkeboks / fritekstfelt</Link></li>
+		<li><Link href="/profil/kari-nordmann/23031510135?name=kari-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135">Kari Nordmann (fnr: 230315 10135)</Link></li>
+		<li><Link href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135">Ola Nordmann (fnr: 240315 10135)</Link></li>
+		<li><Link href="/sok">Søkeboks / fritekstfelt</Link></li>
 	</ul>
 
 	<p class="mb-4 mt-8 font-semibold">Slik fungerer Lekk</p>
