--- a/src/pages/sok.astro
+++ b/src/pages/sok.astro
@@ -1,22 +1,29 @@
 ---
 import { Search } from "@navikt/ds-react";
-import AlertComponent from "../components/mixed/alert.tsx";
 import Layout from '../layouts/corelayout.astro';
+import AkselAlert from "../components/mixed/AkselAlert.tsx";
+import AkselLink from '../components/mixed/AkselLink.astro';
 ---
 
 <Layout title="Event">
 	<h1>Søk / fritekstfelt</h1>
 
-	<form id="search-form" role="search" class="mb-6">
+	<form id="search-form" role="search" class="mb-6 max-w-xl">
 		<Search client:load
-			label="Teksten du skriver inn logges til Amplitude og Umami når du søker"
+			label="Teksten logges til Amplitude og Umami når du søker"
 			variant="primary"
 			id="search-input"
 			hideLabel={false}
 		/>
 	</form>
 
-	<AlertComponent client:load />
+	<AkselAlert />
+
+	<p class="mt-8 font-semibold">Finn i loggen</p>
+	<ul class="list-inside list-disc mt-4 leading-relaxed">
+		<li><AkselLink href="https://app.eu.amplitude.com/analytics/nav/users?searchType=advanced" text="Finn i Amplitude" /></li>
+		<li><AkselLink href="https://umami.ansatt.nav.no/share/pYHYL85MeTxivZtg/leak.ansatt.nav.no?view=query" text="Finn i Umami" /></li>
+	</ul>
 </Layout>
 
 <script>
