La tilbake client:load på AkselAlert

--- a/src/pages/sok.astro
+++ b/src/pages/sok.astro
@@ -17,7 +17,7 @@ import AkselLink from '../components/mixed/AkselLink.astro';
 		/>
 	</form>
 
-	<AkselAlert />
+	<AkselAlert client:load />
 
 	<p class="mt-8 font-semibold">Finn i loggen</p>
 	<ul class="list-inside list-disc mt-4 leading-relaxed">
