Edited link to Amplitude

--- a/src/pages/sok.astro
+++ b/src/pages/sok.astro
@@ -21,7 +21,7 @@ import AkselLink from '../components/mixed/AkselLink.astro';
 
 	<p class="mt-8 font-semibold">Finn i loggen</p>
 	<ul class="list-inside list-disc mt-4 leading-relaxed">
-		<li><AkselLink href="https://app.eu.amplitude.com/analytics/nav/users?searchType=advanced" text="Finn i Amplitude" /></li>
+		<li><AkselLink href="https://app.eu.amplitude.com/analytics/nav/chart/e-xlg67v1d" text="Finn i Amplitude" /></li>
 		<li><AkselLink href="https://umami.ansatt.nav.no/share/pYHYL85MeTxivZtg/leak.ansatt.nav.no?view=query" text="Finn i Umami" /></li>
 	</ul>
 </Layout>
