--- a/src/pages/sok.astro
+++ b/src/pages/sok.astro
@@ -6,7 +6,7 @@ import AkselLink from '../components/mixed/AkselLink.astro';
 ---
 
 <Layout title="Event">
-	<h1>Søk / fritekstfelt</h1>
+	<h1>Søk (fritekstfelt)</h1>
 
 	<form id="search-form" role="search" class="mb-6 max-w-xl">
 		<Search client:load
