--- a/src/layouts/profilelayout.astro
+++ b/src/layouts/profilelayout.astro
@@ -67,8 +67,8 @@ const firstName = name ? getFirstName(name) : '';
 
     <p class="mt-8 font-semibold">Finn i loggen</p>
     <ul class="list-inside list-disc mt-4 leading-relaxed">
-        <li><AkselLink href="https://app.eu.amplitude.com/analytics/nav/live-events" text="Finn i Amplitude" /> (NB: Velg Amplitude prosjekt "ReopsLeak - test")</li>
-        <li><AkselLink href="https://umami.ansatt.nav.no/share/pYHYL85MeTxivZtg/leak.ansatt.nav.no?view=url" text="Finn i Umami" /></li>
+        <li><AkselLink target="_blank" href="https://app.eu.amplitude.com/analytics/nav/live-events" text="Finn i Amplitude" /> (NB: Velg Amplitude prosjekt "ReopsLeak - test")</li>
+        <li><AkselLink target="_blank" href="https://umami.ansatt.nav.no/share/pYHYL85MeTxivZtg/leak.ansatt.nav.no?view=url" text="Finn i Umami" /></li>
     </ul>
 
     <Analyticsdetails />
