--- a/src/layouts/profilelayout.astro
+++ b/src/layouts/profilelayout.astro
@@ -44,7 +44,7 @@ const firstName = name ? getFirstName(name) : '';
 <main class="sm:w-5/6 max-w-[80rem] m-auto px-3 sm:px-6 mb-12 mt-10">
     <h1>{name} (fnr: {formattedFnr})</h1>
     <Akselalert client:load />
-    <p class="mt-8 font-semibold leading-relaxed">Lekkede opplysninger i URL-sti (eg. /profile/{firstName})</p>
+    <p class="mt-8 font-semibold leading-relaxed">Lekkede opplysninger i URL-sti (eg. /profil/{firstName})</p>
     <ul class="list-inside list-disc mt-4">
         <li>Navn: {name}</li>
         <li>FNR: {fnr}</li>
