--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import AkselLink from "../components/mixed/AkselLink.astro";
 	</ul>
 
 	<p class="mb-4 mt-8 font-semibold">Slik fungerer Lekk</p>
-	<p class="max-w-prose leading-relaxed">Når du besøker en profil eller søket, registreres besøket i analyseverktøyene Amplitude og Umami. Lekk nettsiden sender opprinnelig med både (syntetiske) navn og fødselsnummer, men vi har laget en proxy som prøver å fjerne persondata. Med Lekk kan vi teste hvor godt denne filtreringen fungerer.</p>
+	<p class="max-w-prose leading-relaxed">Når du besøker en profil eller søket, registreres besøket i analyseverktøyene Amplitude og Umami. Lekk nettsiden forsøker å sende med både (syntetiske) navn og fødselsnummer på ulike måter. Vi har laget en proxy som fjerner persondata. Med Lekk kan vi teste hvor godt denne filtreringen fungerer.</p>
 
 	<Analyticsdetails />
 </Layout>
