--- a/src/pages/htmx.astro
+++ b/src/pages/htmx.astro
@@ -5,16 +5,17 @@ import Layout from '../layouts/corelayout.astro';
 <Layout title="Om Lekk" description="Utviklet av Team ReserchOps for å teste hvordan analyseverktøy håndterer syntetisk persondata på avveie">
     <h1>Utforsk</h1>
     <div class="max-w-2xl"
-            id="metrics-data"
-            hx-get="https://reops-proxy.intern.nav.no/umami/v2/api/websites/0a0bc436-1eac-45ac-81ab-697ab77ebec1/metrics?range=days&unit=day&timezone=Europe%2FOslo&type=query&search=q"
-            hx-trigger="load"
-            hx-swap="innerHTML"
+         id="metrics-data"
+         hx-get="https://reops-proxy.intern.nav.no/umami/v2/api/websites/0a0bc436-1eac-45ac-81ab-697ab77ebec1/metrics?range=days&unit=day&timezone=Europe%2FOslo&type=query&search=q"
+         hx-trigger="load"
+         hx-swap="innerHTML"
     ></div>
 
     <script>
         document.addEventListener('htmx:afterOnLoad', function(event) {
-            if (event.detail.target.id === 'metrics-data') {
-                const data = JSON.parse(event.detail.xhr.responseText);
+            const customEvent = event as CustomEvent;
+            if (customEvent.detail.target.id === 'metrics-data') {
+                const data = JSON.parse(customEvent.detail.xhr.responseText);
                 const table = document.createElement('table');
                 table.classList.add('table-auto', 'w-full', 'border-collapse', 'border', 'border-gray-200');
 
@@ -48,8 +49,8 @@ import Layout from '../layouts/corelayout.astro';
                 });
                 table.appendChild(tbody);
 
-                event.detail.target.innerHTML = '';
-                event.detail.target.appendChild(table);
+                customEvent.detail.target.innerHTML = '';
+                customEvent.detail.target.appendChild(table);
             }
         });
     </script>
