--- a/src/components/metrics.astro
+++ b/src/components/metrics.astro
@@ -1,4 +1,4 @@
-<script is:inline defer src="https://cdn.nav.no/team-researchops/sporing/umamisporing.js" data-host-url="https://umamiproxy.nav.no" data-website-id="0a0bc436-1eac-45ac-81ab-697ab77ebec1"></script>
+<script is:inline defer src="https://cdn.nav.no/team-researchops/sporing/umamisporing.js" data-host-url="https://umami.nav.no/api/send" data-website-id="0a0bc436-1eac-45ac-81ab-697ab77ebec1"></script>
 <script defer>
     // @ts-nocheck
     !function () {
