La til produktside

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@ import AkselLink from "../components/mixed/AkselLink.astro";
 		<li><AkselLink href="/profil/kari-nordmann/23031510135?name=kari-nordmann&fnr=23031510135&utm_source=23031510135&utm_medium=23031510135&utm_campaign=23031510135" text="Kari Nordmann (fnr: 230315 10135)" /></li>
 		<li><AkselLink href="/profil/ola-nordmann/24031510135?name=ola-nordmann&fnr=24031510135&utm_source=24031510135&utm_medium=24031510135&utm_campaign=24031510135" text="Ola Nordmann (fnr: 240315 10135)" /></li>
 		<li><AkselLink href="/sok" text="Søk (fritekstfelt)" /></li>
+		<li><AkselLink href="/product/b062ea46-9cec-4503-982c-943c1734120a" text="Produktside" /></li>
 	</ul>
 
 	<p class="mb-4 mt-8 font-semibold">Slik fungerer Lekk</p>
