--- a/src/layouts/corelayout.astro
+++ b/src/layouts/corelayout.astro
@@ -1,5 +1,6 @@
 ---
 import Metrics from '../components/metrics.astro';
+import Tracker from '../components/tracker.astro';
 import '../styles/global.css';
 import Header from '../components/theme/header.tsx';
 import Footer from '../components/theme/footer.tsx';
@@ -21,6 +22,7 @@ const { title, description } = Astro.props as Props;
     <title>Lekk{title ? ` - ${title}` : ''}</title>
     {description && <meta name="description" content={description} />}
     <Metrics />
+    <Tracker />
 </head>
 <body>
 <Header client:load />
