--- a/src/components/tracker.astro
+++ b/src/components/tracker.astro
@@ -2,7 +2,7 @@
         data-astro-rerun
         defer
         src="/tracking.js"
-        data-include-url-query="true"
+        data-include-url-query="false"
         data-auto-track="true"
         data-host-url="https://fastapi.nav.no/api/send"
         data-app-id="aa341b70-61d6-4afb-825d-185a46b3c533">
