--- a/src/components/tracker.astro
+++ b/src/components/tracker.astro
@@ -4,6 +4,7 @@
         src="/tracking.js"
         data-include-url-query="false"
         data-auto-track="true"
+        data-respect-do-not-track="false"
         data-host-url="https://fastapi.nav.no/api/send"
-        data-app-id="aa341b70-61d6-4afb-825d-185a46b3c533">
+        data-app-id="91399a4e-7e8f-4d80-b103-09bf65158ac4">
 </script>
