La til sporing med Ping

--- a/src/layouts/profilelayout.astro
+++ b/src/layouts/profilelayout.astro
@@ -1,6 +1,7 @@
 ---
 import Metrics from '../components/metrics.astro';
 import Tracker from '../components/tracker.astro';
+import Ping from '../components/ping.astro';
 import '../styles/global.css';
 import Header from '../components/theme/header.tsx';
 import Footer from '../components/theme/footer.tsx';
@@ -40,6 +41,7 @@ const firstName = name ? getFirstName(name) : '';
     {description && <meta name="description" content={description} />}
     <Metrics />
     <Tracker />
+    <Ping />
 </head>
 <body>
 <Header client:load />
