--- a/src/layouts/corelayout.astro
+++ b/src/layouts/corelayout.astro
@@ -1,6 +1,7 @@
 ---
 import Metrics from '../components/metrics.astro';
 import Tracker from '../components/tracker.astro';
+import Ping from '../components/ping.astro';
 import '../styles/global.css';
 import Header from '../components/theme/header.tsx';
 import Footer from '../components/theme/footer.tsx';
@@ -23,6 +24,7 @@ const { title, description } = Astro.props as Props;
     {description && <meta name="description" content={description} />}
     <Metrics />
     <Tracker />
+    <Ping />
 </head>
 <body>
 <Header client:load />
