--- a/src/components/ping.astro
+++ b/src/components/ping.astro
@@ -1,7 +1,8 @@
 <script is:inline data-astro-rerun defer
         src="https://cdn.nav.no/team-researchops/ping/v1/ping.js"
+        data-ping-endpoint="https://ping.ekstern.dev.nav.no/event"
         data-ping-team="team-researchops"
         data-ping-app="reops-leak"
         data-ping-environment="dev"
-        data-ping-auto-track="true">
+        data-ping-track-pageviews="true">
 </script>
