--- a/src/components/ping.astro
+++ b/src/components/ping.astro
@@ -1,6 +1,6 @@
 <script is:inline data-astro-rerun defer
         src="https://cdn.nav.no/team-researchops/ping/v1/ping.js"
-        data-ping-endpoint="https://ping.ekstern.dev.nav.no/event"
+        data-ping-endpoint="https://ping.nav.no/event"
         data-ping-team="team-researchops"
         data-ping-app="reops-leak"
         data-ping-environment="dev"
